--- a/css/style.css
+++ b/css/style.css
@@ -90,10 +90,11 @@ body {
   }
 
   .projects {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px;
-    padding: 0 20px;
+    text-align: center;
+    font-size: 1em;
+    color: #333333;
+    max-width: 600px;
+    margin: 0 auto 30px;
   }
   
   .project {
