--- a/css/style.css
+++ b/css/style.css
@@ -144,10 +144,11 @@ body {
   }
 
   .recent p {
-    text-align: center;
+    text-align: left;
     font-size: 1em;
     color: #555555;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
+    margin-left: 20px;
   }
 
   section {
