--- a/css/style.css
+++ b/css/style.css
@@ -246,4 +246,12 @@ body {
   p {
       font-size: 18px;
   }
+  nav ul {
+        flex-direction: column; /* Stacks links vertically */
+        align-items: center;    /* Centers the stacked links */
+    }
+
+    nav li {
+        margin: 10px 0; /* vertical spacing between stacked links */
+    
 }
